[gd_scene load_steps=8 format=2]

[ext_resource path="res://Sprites/UI/TooltipWindow.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/buttonLong.png" type="Texture" id=2]
[ext_resource path="res://Sprites/UI/buttonLongPressed.png" type="Texture" id=3]
[ext_resource path="res://Fonts/Font_Regular40.tres" type="DynamicFont" id=4]
[ext_resource path="res://Fonts/Font_Light16.tres" type="DynamicFont" id=6]
[ext_resource path="res://Scenes/Buttons/MM_Button.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Common/EventManager.gd" type="Script" id=8]

[node name="EventManager" type="CanvasLayer"]
script = ExtResource( 8 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Control" type="Control" parent="CenterContainer"]
margin_right = 640.0
margin_bottom = 640.0
rect_min_size = Vector2( 640, 640 )

[node name="NinePatchRect" type="NinePatchRect" parent="CenterContainer/Control"]
self_modulate = Color( 0.835294, 0.866667, 0.870588, 1 )
margin_left = 103.0
margin_top = 135.0
margin_right = 537.0
margin_bottom = 505.0
rect_min_size = Vector2( 434, 370 )
texture = ExtResource( 1 )
patch_margin_left = 1
patch_margin_top = 1
patch_margin_right = 1
patch_margin_bottom = 3

[node name="Title" type="Label" parent="CenterContainer/Control"]
margin_left = 164.0
margin_top = 148.0
margin_right = 474.0
margin_bottom = 263.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 4 )
text = "Tooltip title text"
align = 1
valign = 1
autowrap = true

[node name="Body" type="Label" parent="CenterContainer/Control"]
margin_left = 164.0
margin_top = 272.0
margin_right = 474.0
margin_bottom = 418.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 6 )
text = "This text represents the body of a tooltip and in it will be all the information necessary for user to make a decision."
align = 1
valign = 1
autowrap = true
clip_text = true

[node name="A_Button" parent="CenterContainer/Control" instance=ExtResource( 7 )]
margin_left = 133.0
margin_top = 424.0
margin_right = 305.0
margin_bottom = 478.0
icon = ExtResource( 2 )
buttonText = "PROCEED"
sPressed = ExtResource( 3 )
sReleased = ExtResource( 2 )

[node name="B_Button" parent="CenterContainer/Control" instance=ExtResource( 7 )]
margin_left = 330.0
margin_top = 424.0
margin_right = 502.0
margin_bottom = 478.0
icon = ExtResource( 2 )
buttonText = "PROCEED"
sPressed = ExtResource( 3 )
sReleased = ExtResource( 2 )

[connection signal="buttonPressed" from="CenterContainer/Control/A_Button" to="." method="_on_A_Button_buttonPressed"]
[connection signal="buttonPressed" from="CenterContainer/Control/B_Button" to="." method="_on_B_Button_buttonPressed"]
